2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c (send_card_buffer): Fix
	prototype.
	(get_card_packet): Likewise.

2011-06-26  Yves Blusseau  <blusseau@zetam.org>

	Display the path of the file when file is not found

	* grub-core/fs/fat.c: Display the filename when file is not found.
	* grub-core/fs/fshelp.c: Likewise.
	* grub-core/fs/hfs.c: Likewise.
	* grub-core/fs/jfs.c: Likewise.
	* grub-core/fs/minix.c: Likewise.
	* grub-core/fs/ufs.c: Likewise.
	* grub-core/fs/btrfs.c: Likewise.
	* grub-core/commands/i386/pc/play.c: Likewise.

2011-06-26  Szymon Janc <szymon@janc.net.pl>

	* grub-core/commands/cmp.c (grub_cmd_cmp): Remove unnecessary NULL
	pointer checks before calling grub_free().
	* grub-core/commands/wildcard.c (match_devices): Likewise.
	* grub-core/commands/wildcard.c (match_files): Likewise.
	* grub-core/fs/cpio.c (grub_cpio_dir): Likewise.
	* grub-core/fs/cpio.c (grub_cpio_open): Likewise.
	* grub-core/fs/udf.c (grub_udf_read_block): Likewise.
	* grub-core/fs/xfs.c (grub_xfs_read_block): Likewise.
	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Likewise.
	* grub-core/normal/cmdline.c (grub_cmdline_get): Likewise.
	* grub-core/script/yylex.l (grub_lexer_unput): Likewise.
	* grub-core/video/readers/jpeg.c (grub_video_reader_jpeg): Likewise.
	* grub-core/video/readers/png.c (grub_png_output_byte): Likewise.

2011-06-25  Patrick <p55@mailinator.com>

	* grub-core/kern/main.c (grub_load_normal_mode): Correct the comment.

2011-06-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/i386/pc/pxe.c (grub_pxe_recv): Fix declaration.
	(grub_pxe_send): Likewise.
	(GRUB_MOD_INIT): Fix types.

2011-06-24  Szymon Janc <szymon@janc.net.pl>

	* grub-core/io/xzio.c: Fix code style issues

2011-06-24  Vladimir Serbinenko  <phcoder@gmail.com>
2011-06-24  Manoel Rebelo Abranches <mrabran@gmail.com>

	Network infrastructure.
	The ARP protocol was made by Paulo Pinatti <ppinatti@br.ibm.com>
